--- a/simple-todos/prueba/prueba.html
+++ b/simple-todos/prueba/prueba.html
@@ -1,5 +1,19 @@
 <head>
   <link rel="stylesheet" href="base.css" type="text/css" />
+  <style>
+            body {
+                background: url("home/al-10-11/acarrion/Desktop/ISI/.git/masav-plataforma-ISI/simple-todos/Images") repeat;
+            }
+            #banner {
+                position: absolute;
+                top: 0px;
+                left: 0px;
+                right: 0px;
+                width: 100%;
+                height: 200px;
+                z-index: -1;
+            }
+        </style>
 </head>
 
 <body>
@@ -9,6 +23,7 @@
 	</div>
 	
 	<div id='menu' style= "position:relative;">
+                <a href="#" class="button">HOME&nbsp;♛</a>
 		<ul><button class= "fondo"> home </button></ul>
 		<ul><button class= "fondo"> home </button></ul>
 		<ul><button class= "fondo"> home </button></ul>
