Botones menu y presentación de partidas

--- a/simple-todos/prueba/prueba.html
+++ b/simple-todos/prueba/prueba.html
@@ -1,5 +1,6 @@
 <head>
   <link rel="stylesheet" href="base.css" type="text/css" />
+  <img src="indice.jpeg">
   <style>
             body {
                 background: url("home/al-10-11/acarrion/Desktop/ISI/.git/masav-plataforma-ISI/simple-todos/Images") repeat;
@@ -22,15 +23,13 @@
 		style="position:absolute; left: 0; top: 0;" ></canvas> -->
 	</div>
 	
-	<div id='menu' style= "position:relative;">
-                <a href="#" class="button">HOME&nbsp;♛</a>
-		<ul><button class= "fondo"> home </button></ul>
-		<ul><button class= "fondo"> home </button></ul>
-		<ul><button class= "fondo"> home </button></ul>
-		<ul><button class= "fondo"> home </button></ul>
-		<ul><button class= "fondo"> home </button></ul>
-		<ul><button class= "fondo"> home </button></ul>
-	</div>
+
+        <div class="btn-group-vertical" id='menu'>
+           <button type="button" class="btn btn-default tamano">Home&nbsp;♛</button>
+           <button type="button" class="btn btn-default tamano">New Game</button>          
+           <button type="button" class="btn btn-default tamano">Aux2</button>
+           <button type="button" class="btn btn-default tamano">Aux3</button>         
+       </div>
 	
 	<div id='messages' style= "position:relative;">
 
@@ -39,6 +38,13 @@
 		<!-- <canvas id='chat' width='200' height='500'
 		style="position:absolute; left: 0; top: 250;"></canvas> -->
 	</div>
+
+        <div id='waiting_matches' style= "position:center;" class="jumbotron">
+          <div>        	
+                {{> draw_matches}}		
+          </div>
+          <p><a class="btn btn-primary btn-lg" href="#" role="button">Refresh</a></p>
+        </div>
 	
 </body>
 
@@ -97,6 +103,19 @@
   
 </template>
 
+
+<template name="draw_matches">
+    <ol class="breadcrumb">
+        <li id= "match_name">Prueba</li>
+        <li>|</li>
+        <li id= "match_players">4</li>
+        <li>|</li> 
+        <li id= "match_owner">Pablito</li>
+        <button type="button" class="btn btn-default" aria-label="Left Align">
+             <span class="glyphicon glyphicon-play" aria-hidden="false"></span>
+        </button>               
+    </ol>
+</template>
 
 <template name="hello">
   <button>Click Me</button>
