--- a/simple-todos/plataforma.html
+++ b/simple-todos/plataforma.html
@@ -73,6 +73,7 @@
 		        <button class="btn btn-primary btn-lg" id="wait_cancel">Cancelar</button> 
                 </td>
         </div>
+        
 </template>
 
 <template name="chat">
@@ -146,7 +147,18 @@
                 <button type="button" class="btn btn-default play_game">&nbsp;▶</button>       
             </ol>
     </div>
+    
+   <div id='display_match_started'>    
+            <ol class="breadcrumb estilopartida">
+	        	<li id= "Status">Empezada!!</li>
+                <button type="button" class="btn btn-default play_game">Terminar Partida??</button>             
+            </ol>
+    </div>
+
+
 </template>
+
+
 
 <!-- <template name="players"> -->
 <!--     <h2> <strong>points</strong>({{match_name}}) </h2> -->
