--- a/simple-todos/plataforma.html
+++ b/simple-todos/plataforma.html
@@ -147,7 +147,7 @@
                 <button type="button" class="btn btn-default play_game">&nbsp;▶</button>       
             </ol>
             -->
-            {{#each matches}}
+            {{#each matches_Wait}}
             <ol class="breadcrumb estilopartida">
                 <li id= "match_name">{{nombre_partida}}</li>
                 <li>|</li>
